<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/ranking_foot_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/kr4_ranking_hideview_bg_light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/kr4_content_text" android:textColor="@color/kr4_ranking_hideview_text_gray" android:id="@id/description_foot_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/kr4_ranking_three_more" />
        <View android:id="@id/kingroot_qr_code" android:background="@drawable/kr4_wx_qrcode" android:layout_width="55.0dip" android:layout_height="55.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
        <TextView android:textSize="@dimen/kr4_content_text" android:textColor="@color/kr4_black_text" android:id="@id/foot_view_focus_qr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kr4_click_to_focus_wechat" />
        <TextView android:textSize="@dimen/kr4_content_text" android:textColor="@color/kr4_black_text" android:id="@id/foot_view_get_adapted_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/kr4_get_lastest_adapted_info" />
    </LinearLayout>
</RelativeLayout>