<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#77555555" android:padding="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/kr4_bg_common_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="18.0sp" android:textColor="@color/kr4_black_text" android:gravity="center_horizontal" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/kr4_follow_wxaccount" />
        <View android:layout_gravity="center_horizontal" android:background="@drawable/kr4_wx_qrcode" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" />
        <TextView android:textSize="@dimen/kr4_content_text" android:textColor="@color/kr4_black_text_secondary" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/kr4_save_qrcode_tips" />
        <View android:background="@color/kr4_gray_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/kr4_main_blue" android:gravity="center" android:id="@id/btn_left" android:background="@drawable/kr4_dialog_bottom_btn" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/kr4_cancel" android:layout_weight="1.0" />
            <View android:background="@color/kr4_gray_line" android:layout_width="1.0px" android:layout_height="fill_parent" />
            <TextView android:textSize="16.0sp" android:textColor="@color/kr4_main_blue" android:gravity="center" android:id="@id/btn_right" android:background="@drawable/kr4_dialog_bottom_btn" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/kr4_save_to_storage" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>